# rs-csv2json

./: Cargo.toml  README.md  example.sh
sample.d/: input.csv
src/: lib.rs  main.rs
