[package]
name = "rs-csv2json"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.arrow]
version = "55.2.0"
default-features = false
features = [
	"csv",
	"json",
]

[dependencies.arrow-schema]
version = "55.2.0"
default-features = false
features = [
]

[dependencies.arrow-array]
version = "55.2.0"
default-features = false
features = [
]

[dependencies.arrow-csv]
version = "55.2.0"
default-features = false
features = [
]

[dependencies.arrow-json]
version = "55.2.0"
default-features = false
features = [
]
